--- a/.env
+++ b/.env
@@ -2,4 +2,4 @@ MONGO_URI=your_mongodb_connection_string
 JWT_SECRET=your_secret_key
 EMAIL_USER=your_email@gmail.com
 EMAIL_PASS=your_email_password
-FRONTEND_URL=http://your-frontend-url.com
+FRONTEND_URL=https://whatsapp-contact-gain-frontendd.onrender.com
